// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Context Provider Should allow updates. 1`] = `
<MockContextProvider>
  <MockContextConsumer>
    <div>
      Hi! My name is Lucas
    </div>
  </MockContextConsumer>
</MockContextProvider>
`;

exports[`Generic Context Provider Should allow updates. 2`] = `
<MockContextProvider>
  <MockContextConsumer>
    <div>
      Hi! My name is Isaac
    </div>
  </MockContextConsumer>
</MockContextProvider>
`;

exports[`Generic Context Provider Should render read, write, and both providers at once. 1`] = `
<Context.Provider
  value={
    Object {
      "name": "Lucas",
    }
  }
>
  <Context.Provider
    value={
      Object {
        "name": "Lucas",
      }
    }
  >
    <Context.Provider
      value={
        Object {
          "name": "Lucas",
        }
      }
    >
      <React.Fragment />
    </Context.Provider>
  </Context.Provider>
</Context.Provider>
`;
